[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toolgate-probe"
version = "0.1.0"
description = "LLM routing — decide whether a query needs a tool or can be answered directly using hidden-state probes."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["llm", "routing", "tool-use", "transformers", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "scikit-learn>=1.3",
    "numpy>=1.24",
]

[project.optional-dependencies]
server = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
dev    = ["pytest>=8.0", "pytest-asyncio", "httpx"]

[project.urls]
Homepage    = "https://github.com/tanishqtayade/toolgate"
Repository  = "https://github.com/tanishqtayade/toolgate"
Issues      = "https://github.com/tanishqtayade/toolgate/issues"



[tool.setuptools.packages.find]
where = ["."]
include = ["toolgate*"]